*
* 0.2.5
*

- Added support for CheckPoint SNMP agent running on port 260
- Added SNMP MIBs for Nokia IPSO
- Added new parameter Agent.ActiveConnections to core agent
- Windows console:
	- Sorting implemented in "Last DCI Values" view
	- Added node tree in alarm browser
	- Added possibility to copy DCIs to template
- Fixed issues: #36, #39, #42, #45


*
* 0.2.4
*

- Implemented agent's configuration file editing from console
- Implemented actions provided by subagents
- Built-in action Agent.Restart added to core agent
- Configurable object tools introduced (not fully implemented yet)
- Fixed bug causing occasional server crash
- Fixed issues: #5, #37, #38, #40, #41


*
* 0.2.3
*

- Implemented basic event correlation
- Added new object class: VPN connector
- Active alarms now used in status calculation
- Windows agent: implemented enum Net.IP.RoutingTable
- Database Manager: implemented forced check/unlock flag
- Maximum number of sessions in agent made configurable
- Agent ported to Windows 95/98/Me
- Windows console: added possibility to specify loopback address (127.0.0.1)
  as bind address for network service
- Fixed bug causing random fails of connections from server to agent and
  from console to server
- Fixed issues: #29, #32, #33


*
* 0.2.2
*

- Implemented communication session encryption
- Added support for multiple database connections for better performance
- Added generation of SYS_NODE_DOWN and SYS_NODE_UP events
- Added possibility to edit server's configuration parameters from
  administrator's console
- Object status calculation algorithm changed
- Fixed incorrect 32 bit integer varbinds parsing in libnxsnmp
- Fixed bug with new interface detection
- Windows console: added simple export of collected DCI data
- Core agent: added configuration option SessionIdleTimeout for automatic
  disconnect of idle or broken sessions
- Fixed issues: #26, #30


*
* 0.2.1
*

- Server startup procedure improved
- Fixed bug in Windows service shutdown code